--- a/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
@@ -434,8 +434,8 @@
             {
                 <text>
                 {
-                    name: '@item.Nhac.TenBH',
-                    artist: '@item.Nhac.CaSi.TenCS',
+                    name: @Html.Raw(Json.Encode(item.Nhac.TenBH)),
+                    artist: @Html.Raw(Json.Encode(item.Nhac.CaSi.TenCS)),
                     file: '/Sound/@item.Nhac.Files',
                     image: '/image/@item.Nhac.image'
                 },
