--- a/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
+++ b/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
@@ -271,7 +271,7 @@
                                            style="border: none">
                                             <div class="cover-art cover-art-image" style="width: 56px; height: 56px">
                                                 <div>
-                                                    <img src="~/image/tải xuống.jpg"
+                                                    <img src="~/image/logo.jpg"
                                                          class="mMx2LUixlnN_Fu45JpFB cover-art-image Yn2Ei5QZn19gria6LjZj" id="imagelayout" />
                                                 </div>
                                             </div>
